@@ -1,3 +1,5 @@
+ - Automatically reinitialize GMRES solver when system size changes
+ - Implement cout << for class Vector
 0.5.10 [2005-10-11]
  - Modify ODE solver interface: add T to constructor
  - Fix compilation on AMD 64 bit systems (add -fPIC)
